I don't even know what this does or why I added it...