@@ -12,4 +12,4 @@ RUN mkdir /data
 
 COPY --from=build /home/gradle/src/build/libs/*-all.jar /app/app.jar
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom", "-Duser.dir=/data/", "-jar", "/app/app.jar"]
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-Djava.security.egd=file:/dev/./urandom", "-Duser.dir=/data/", "-jar", "/app/app.jar"]
